updating nanogen.ui files

--- a/sknano/apps/nanogen_gui/nanogen.ui
+++ b/sknano/apps/nanogen_gui/nanogen.ui
@@ -1397,7 +1397,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="save_as_fpath_lineEdit">
+         <widget class="QLineEdit" name="fpath_lineEdit">
           <property name="font">
            <font>
             <family>Arial</family>
