--- a/sknano/apps/nanogen_gui/fullerene_generator.ui
+++ b/sknano/apps/nanogen_gui/fullerene_generator.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>FullereneGeneratorMainWindow</class>
- <widget class="QMainWindow" name="FullereneGeneratorMainWindow">
+ <class>FullereneGenerator</class>
+ <widget class="QMainWindow" name="FullereneGenerator">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -30,12 +30,12 @@
   </property>
   <property name="font">
    <font>
-    <family>Lucida Sans Unicode</family>
+    <family>Arial</family>
     <pointsize>14</pointsize>
    </font>
   </property>
   <property name="windowTitle">
-   <string>NanoGen</string>
+   <string>Fullerene Generator</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
