--- a/sknano/apps/nanogen_gui/nanogen.ui
+++ b/sknano/apps/nanogen_gui/nanogen.ui
@@ -30,7 +30,7 @@
   </property>
   <property name="font">
    <font>
-    <family>Lucida Sans Unicode</family>
+    <family>Arial</family>
     <pointsize>14</pointsize>
    </font>
   </property>
